update gradle wrapper, enable migration to junit 5