@@ -1,6 +1,5 @@
 apply plugin: 'java'
 
-sourceCompatibility = 1.7
 version = '1.0'
 
 repositories {
@@ -9,7 +8,47 @@ repositories {
 
 dependencies {
     compile 'joda-time:joda-time:2.7'
-    testCompile 'junit:junit:4.11'
+
+    testImplementation(platform("org.junit:junit-bom:5.7.0"))
+
+    testImplementation("org.junit.jupiter:junit-jupiter") {
+        because 'allows to write and run Jupiter tests'
+    }
+
+    testImplementation("junit:junit:4.13")
+    testRuntimeOnly("org.junit.vintage:junit-vintage-engine") {
+        because 'allows JUnit 3 and JUnit 4 tests to run'
+    }
+
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher") {
+        because 'allows tests to run from IDEs that bundle older version of launcher'
+    }
     testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'org.hamcrest:hamcrest-core:1.3'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add("-Xlint:all")
+    options.incremental = true
+
+    if (jdkWithPreviewFeatures())
+        options.compilerArgs.add("--enable-preview")
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+
+    if (jdkWithPreviewFeatures())
+        jvmArgs("--enable-preview")
+}
+
+static def jdkWithPreviewFeatures() {
+    def currentJvm = org.gradle.internal.jvm.Jvm.current()
+    def matcher = currentJvm =~ /^\d+/
+    println matcher[0]
+
+    return matcher[0].toInteger() > 11
 }
